# snake-neural-playground

./: .gitignore  README.md  neural-network-live.html  pyproject.toml
models/: dqn_11_state.pt  q_learning_best.pkl
scripts/: capture_readme_screenshots.py  inspect_pkl.py  play_best_q.py  run_hamiltonian.py  run_hybrid_hamiltonian.py  test_advanced_state.py  test_board_analysis.py  test_env.py  train_dqn.py  train_q_learning.py  watch_agents.py  watch_random.py
scripts/ui/: __init__.py  agent_data.py  board_config.py  components.py  dashboard.py  demo_features.py  game_renderer.py  layout.py  model_info.py  nn_bridge.py  nn_payload.py  theme.py
src/snake_rl/: __init__.py
src/snake_rl/agents/: __init__.py  base_agent.py  boundary_loop_agent.py  dqn_agent.py  dqn_model.py  greedy_agent.py  hamiltonian_agent.py  hybrid_hamiltonian_agent.py  manual_agent.py  q_learning_agent.py  random_agent.py
src/snake_rl/core/: board_analysis.py  metrics.py  pathfinding.py  replay_memory.py
src/snake_rl/envs/: __init__.py  snake_env.py
web/: neural-network-live.html
