[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-rl"
version = "0.1.0"
description = "Reinforcement learning Snake agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
